# Duplex0r

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS.md  dependabot.yml
backend/: .env.example  pyproject.toml
backend/api/app/: config.py  database.py  main.py  models.py  schemas.py
backend/api/app/routers/: __init__.py  logs.py  processing.py  settings.py
backend/api/app/services/: pdf.py
backend/api/tests/: test_pdf.py
backend/app/: __init__.py  config.py  main.py  pdf.py  schemas.py
backend/app/api/routes/: __init__.py  health.py  logs.py  sessions.py  settings.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/utils/: __init__.py  audit.py  files.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: FileDropZone.tsx  PdfPreview.tsx  SplashScreen.tsx  theme-toggle.tsx
frontend/src/components/ui/: alert.tsx  button.tsx  card.tsx  label.tsx  separator.tsx  sheet.tsx
scripts/: start.py  start.sh  stop.py  stop.sh
